# gb-cashback

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
gb_cashback/: app.py  calculator.py  db.py  models.py  security.py  settings.py
gb_cashback/routes/: auth.py  cashback.py  purchases.py  resellers.py
gb_cashback/schemas/: cashback.py  purchase.py  reseller.py
migrations/: env.py
migrations/versions/: 0c4b1498d0e6_create_purchases_table.py  832b8de8f50d_update_purchases_table.py  fdfbc93bcac8_create_resellers_table.py
tests/: conftest.py  test_auth.py  test_calculator.py  test_cashback.py  test_purchases.py  test_resellers.py
