[tool.poetry]
name = "gb-cashback"
version = "0.1.0"
description = "Cashback Calculator - Teste GB backend"
authors = ["Eduardo Gomes <edu_merckx@yahoo.com.br>"]
readme = "README.md"
packages = [{include = "gb_cashback"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
sqlalchemy = "^2.0.38"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
taskipy = "^1.14.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev gb_cashback/app.py'
test = 'pytest -s -x --cov=gb_cashback -vv'
post_test = 'coverage xml'